--- a/src/styles/components/_testimonials.scss
+++ b/src/styles/components/_testimonials.scss
@@ -3,7 +3,7 @@
     //color: white;
     background-image: url(../../public/images/Entreprenaur.jpg);
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: local;
     position: relative;
 }
 
@@ -89,4 +89,9 @@
     .testimonial__title{
         font-size: unset;
     }
+
+    .testimonial__container{
+        background-attachment: fixed;
+    }
+    
 } 
